[package]
name = "hw-04"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solution"
path = "src/solution.rs"
test = false

[[test]]
name = "test"
path = "tests/tests.rs"
harness = false

[lib]
test = false
doctest = false

[dependencies]
image = "0.24.7"
rand = "0.8.5"
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
serde_json = "*"
lazy_static = "1.4.0"
colored = "2.0.4"
panic-message = "0.3.0"
